--- a/public/preview.html
+++ b/public/preview.html
@@ -1,61 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Preview</title>
-  <style>
-    body {
-      margin: 0;
-      background: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-    .card {
-      width: 360px;
-      aspect-ratio: 9/16;
-      position: relative;
-      overflow: hidden;
-    }
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>VidGen – Card Creator</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+  body {
+    margin: 0;
+    background: #020617;
+    color: #e5e7eb;
+    font-family: system-ui, -apple-system;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+
+  h1 {
+    margin-bottom: 16px;
+  }
+
+  .panel {
+    width: 100%;
+    max-width: 420px;
+    background: #020617;
+    border: 1px solid #1e293b;
+    border-radius: 12px;
+    padding: 16px;
+    margin-bottom: 20px;
+  }
+
+  label {
+    display: block;
+    margin-top: 12px;
+    font-size: 14px;
+    color: #94a3b8;
+  }
+
+  input, textarea {
+    width: 100%;
+    margin-top: 6px;
+    padding: 10px;
+    background: #020617;
+    border: 1px solid #334155;
+    border-radius: 8px;
+    color: #e5e7eb;
+  }
+
+  textarea {
+    resize: vertical;
+    min-height: 80px;
+  }
+
+  button {
+    width: 100%;
+    margin-top: 16px;
+    padding: 12px;
+    background: #38bdf8;
+    border: none;
+    border-radius: 10px;
+    font-weight: 700;
+    cursor: pointer;
+  }
+
+  .preview {
+    width: 360px;
+    aspect-ratio: 9 / 16;
+    border-radius: 14px;
+    overflow: hidden;
+    border: 1px solid #1e293b;
+    background: #000;
+  }
+
+  .preview img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+</style>
 </head>
 <body>
 
-<div class="card">
-  <img id="img" />
+<h1>VidGen</h1>
+
+<div class="panel">
+  <label>Text</label>
+  <textarea id="text">Stay consistent. Build daily.</textarea>
+
+  <label>Text Color</label>
+  <input type="color" id="textColor" value="#38bdf8">
+
+  <label>Card Background Color</label>
+  <input type="color" id="bgColor" value="#020617">
+
+  <label>Music URL</label>
+  <input id="musicUrl" placeholder="https://example.com/music.mp3">
+
+  <button onclick="generate()">Generate</button>
+</div>
+
+<div class="preview">
+  <img id="result">
 </div>
 
 <audio id="audio"></audio>
 
 <script>
-async function load() {
+async function generate() {
+  const payload = {
+    text: document.getElementById("text").value,
+    textColor: document.getElementById("textColor").value,
+    bgColor: document.getElementById("bgColor").value,
+    musicUrl: document.getElementById("musicUrl").value,
+    fontSize: 68
+  };
+
   const res = await fetch("/api/generate-card", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      text: "Dream big. Stay focused.",
-      bgColor: "#020617",
-      textColor: "#38bdf8",
-      fontSize: 70,
-      musicUrl: "https://example.com/music.mp3"
-    })
+    body: JSON.stringify(payload)
   });
 
   const data = await res.json();
-  document.getElementById("img").src = data.image;
 
-  const audio = document.getElementById("audio");
-  audio.src = data.music;
-  audio.play();
+  if (!data.success) {
+    alert("Failed to generate");
+    return;
+  }
+
+  document.getElementById("result").src = data.image;
+
+  if (data.music) {
+    const audio = document.getElementById("audio");
+    audio.src = data.music;
+    audio.play().catch(() => {});
+  }
 }
-
-load();
 </script>
 
 </body>
