--- a/public/preview.html
+++ b/public/preview.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>VidGen – Card Creator</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <style>
+  * {
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont;
+  }
+
   body {
     margin: 0;
     background: #020617;
     color: #e5e7eb;
-    font-family: system-ui, -apple-system;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 16px;
   }
 
   h1 {
-    margin-bottom: 16px;
+    margin: 12px 0 20px;
+    font-size: 22px;
+    font-weight: 700;
   }
 
   .panel {
@@ -26,19 +32,20 @@
     max-width: 420px;
     background: #020617;
     border: 1px solid #1e293b;
-    border-radius: 12px;
+    border-radius: 14px;
     padding: 16px;
     margin-bottom: 20px;
   }
 
   label {
     display: block;
-    margin-top: 12px;
-    font-size: 14px;
+    margin-top: 14px;
+    font-size: 13px;
     color: #94a3b8;
   }
 
-  input, textarea {
+  textarea,
+  input {
     width: 100%;
     margin-top: 6px;
     padding: 10px;
@@ -46,6 +53,7 @@
     border: 1px solid #334155;
     border-radius: 8px;
     color: #e5e7eb;
+    font-size: 14px;
   }
 
   textarea {
@@ -55,86 +63,115 @@
 
   button {
     width: 100%;
-    margin-top: 16px;
+    margin-top: 18px;
     padding: 12px;
     background: #38bdf8;
+    color: #020617;
     border: none;
     border-radius: 10px;
     font-weight: 700;
+    font-size: 15px;
     cursor: pointer;
   }
 
-  .preview {
+  button:active {
+    transform: scale(0.98);
+  }
+
+  .preview-wrapper {
     width: 360px;
+    max-width: 100%;
     aspect-ratio: 9 / 16;
-    border-radius: 14px;
+    border-radius: 16px;
     overflow: hidden;
     border: 1px solid #1e293b;
     background: #000;
   }
 
-  .preview img {
+  .preview-wrapper img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    display: block;
   }
 </style>
 </head>
+
 <body>
 
 <h1>VidGen</h1>
 
 <div class="panel">
-  <label>Text</label>
-  <textarea id="text">Stay consistent. Build daily.</textarea>
+  <label for="text">Text (required)</label>
+  <textarea id="text" placeholder="Type something...">Stay consistent. Build daily.</textarea>
 
-  <label>Text Color</label>
-  <input type="color" id="textColor" value="#38bdf8">
+  <label for="textColor">Text Color</label>
+  <input type="color" id="textColor" value="#ffffff" />
 
-  <label>Card Background Color</label>
-  <input type="color" id="bgColor" value="#020617">
+  <label for="bgColor">Card Background Color</label>
+  <input type="color" id="bgColor" value="#020617" />
 
-  <label>Music URL</label>
-  <input id="musicUrl" placeholder="https://example.com/music.mp3">
+  <label for="musicUrl">Music URL (optional)</label>
+  <input id="musicUrl" placeholder="https://example.com/music.mp3" />
 
-  <button onclick="generate()">Generate</button>
+  <button onclick="generateCard()">Generate Card</button>
 </div>
 
-<div class="preview">
-  <img id="result">
+<div class="preview-wrapper">
+  <img id="preview" alt="Preview will appear here" />
 </div>
 
 <audio id="audio"></audio>
 
 <script>
-async function generate() {
-  const payload = {
-    text: document.getElementById("text").value,
-    textColor: document.getElementById("textColor").value,
-    bgColor: document.getElementById("bgColor").value,
-    musicUrl: document.getElementById("musicUrl").value,
-    fontSize: 68
-  };
+async function generateCard() {
+  const textValue = document.getElementById("text").value.trim();
 
-  const res = await fetch("/api/generate-card", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(payload)
-  });
-
-  const data = await res.json();
-
-  if (!data.success) {
-    alert("Failed to generate");
+  if (!textValue) {
+    alert("Please enter some text.");
     return;
   }
 
-  document.getElementById("result").src = data.image;
+  const payload = {
+    text: textValue,
+    textColor: document.getElementById("textColor").value,
+    bgColor: document.getElementById("bgColor").value,
+    musicUrl: document.getElementById("musicUrl").value.trim(),
+    fontSize: 64
+  };
 
-  if (data.music) {
+  try {
+    const res = await fetch("/api/generate-card", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    const data = await res.json();
+
+    if (!data.success) {
+      alert("Failed to generate card");
+      return;
+    }
+
+    // Show image
+    const img = document.getElementById("preview");
+    img.src = data.image;
+
+    // Play music (if any)
     const audio = document.getElementById("audio");
-    audio.src = data.music;
-    audio.play().catch(() => {});
+    if (data.music) {
+      audio.src = data.music;
+      audio.currentTime = 0;
+      audio.play().catch(() => {});
+    } else {
+      audio.pause();
+      audio.src = "";
+    }
+
+  } catch (err) {
+    console.error(err);
+    alert("Error generating card");
   }
 }
 </script>
