--- a/public/preview.html
+++ b/public/preview.html
@@ -1,180 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>VidGen – Card Creator</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <title>VidGen – Simple Card Generator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-  * {
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont;
-  }
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-  body {
-    margin: 0;
-    background: #020617;
-    color: #e5e7eb;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 16px;
-  }
+    body {
+      margin: 0;
+      padding: 16px;
+      background: #0f172a;
+      color: #e5e7eb;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-  h1 {
-    margin: 12px 0 20px;
-    font-size: 22px;
-    font-weight: 700;
-  }
+    h1 {
+      margin-bottom: 16px;
+      font-size: 22px;
+    }
 
-  .panel {
-    width: 100%;
-    max-width: 420px;
-    background: #020617;
-    border: 1px solid #1e293b;
-    border-radius: 14px;
-    padding: 16px;
-    margin-bottom: 20px;
-  }
+    .panel {
+      width: 100%;
+      max-width: 420px;
+      background: #020617;
+      border: 1px solid #1e293b;
+      border-radius: 12px;
+      padding: 16px;
+    }
 
-  label {
-    display: block;
-    margin-top: 14px;
-    font-size: 13px;
-    color: #94a3b8;
-  }
+    label {
+      display: block;
+      margin-top: 12px;
+      font-size: 14px;
+      color: #94a3b8;
+    }
 
-  textarea,
-  input {
-    width: 100%;
-    margin-top: 6px;
-    padding: 10px;
-    background: #020617;
-    border: 1px solid #334155;
-    border-radius: 8px;
-    color: #e5e7eb;
-    font-size: 14px;
-  }
+    textarea,
+    input {
+      width: 100%;
+      margin-top: 6px;
+      padding: 10px;
+      font-size: 14px;
+      background: #020617;
+      color: #e5e7eb;
+      border: 1px solid #334155;
+      border-radius: 8px;
+    }
 
-  textarea {
-    resize: vertical;
-    min-height: 80px;
-  }
+    textarea {
+      min-height: 80px;
+      resize: vertical;
+    }
 
-  button {
-    width: 100%;
-    margin-top: 18px;
-    padding: 12px;
-    background: #38bdf8;
-    color: #020617;
-    border: none;
-    border-radius: 10px;
-    font-weight: 700;
-    font-size: 15px;
-    cursor: pointer;
-  }
+    button {
+      width: 100%;
+      margin-top: 16px;
+      padding: 12px;
+      background: #38bdf8;
+      color: #020617;
+      font-weight: bold;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
 
-  button:active {
-    transform: scale(0.98);
-  }
+    .preview {
+      margin-top: 20px;
+      width: 360px;
+      max-width: 100%;
+      aspect-ratio: 9 / 16;
+      background: #000;
+      border-radius: 14px;
+      overflow: hidden;
+      border: 1px solid #1e293b;
+    }
 
-  .preview-wrapper {
-    width: 360px;
-    max-width: 100%;
-    aspect-ratio: 9 / 16;
-    border-radius: 16px;
-    overflow: hidden;
-    border: 1px solid #1e293b;
-    background: #000;
-  }
-
-  .preview-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
-</style>
+    .preview img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
 
-<h1>VidGen</h1>
+  <h1>VidGen</h1>
 
-<div class="panel">
-  <label for="text">Text (required)</label>
-  <textarea id="text" placeholder="Type something...">Stay consistent. Build daily.</textarea>
+  <div class="panel">
+    <label for="text">Text</label>
+    <textarea id="text">HELLO WORLD</textarea>
 
-  <label for="textColor">Text Color</label>
-  <input type="color" id="textColor" value="#ffffff" />
+    <label for="textColor">Text Color</label>
+    <input type="color" id="textColor" value="#ff0000" />
 
-  <label for="bgColor">Card Background Color</label>
-  <input type="color" id="bgColor" value="#020617" />
+    <label for="bgColor">Background Color</label>
+    <input type="color" id="bgColor" value="#ffffff" />
 
-  <label for="musicUrl">Music URL (optional)</label>
-  <input id="musicUrl" placeholder="https://example.com/music.mp3" />
+    <label for="musicUrl">Music URL (optional)</label>
+    <input
+      id="musicUrl"
+      placeholder="https://example.com/music.mp3"
+    />
 
-  <button onclick="generateCard()">Generate Card</button>
-</div>
+    <button onclick="generateCard()">Generate Card</button>
+  </div>
 
-<div class="preview-wrapper">
-  <img id="preview" alt="Preview will appear here" />
-</div>
+  <div class="preview">
+    <img id="previewImage" />
+  </div>
 
-<audio id="audio"></audio>
+  <audio id="audio"></audio>
 
-<script>
-async function generateCard() {
-  const textValue = document.getElementById("text").value.trim();
+  <script>
+    async function generateCard() {
+      const payload = {
+        text: document.getElementById("text").value,
+        textColor: document.getElementById("textColor").value,
+        bgColor: document.getElementById("bgColor").value,
+        musicUrl: document.getElementById("musicUrl").value,
+        fontSize: 72
+      };
 
-  if (!textValue) {
-    alert("Please enter some text.");
-    return;
-  }
+      try {
+        const res = await fetch("/api/generate-card", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
+        });
 
-  const payload = {
-    text: textValue,
-    textColor: document.getElementById("textColor").value,
-    bgColor: document.getElementById("bgColor").value,
-    musicUrl: document.getElementById("musicUrl").value.trim(),
-    fontSize: 64
-  };
+        const data = await res.json();
 
-  try {
-    const res = await fetch("/api/generate-card", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
-    });
+        // Show image
+        document.getElementById("previewImage").src = data.image;
 
-    const data = await res.json();
+        // Play music if exists
+        const audio = document.getElementById("audio");
+        if (data.music) {
+          audio.src = data.music;
+          audio.currentTime = 0;
+          audio.play().catch(() => {});
+        } else {
+          audio.pause();
+          audio.src = "";
+        }
 
-    if (!data.success) {
-      alert("Failed to generate card");
-      return;
+      } catch (err) {
+        alert("Error generating card");
+        console.error(err);
+      }
     }
-
-    // Show image
-    const img = document.getElementById("preview");
-    img.src = data.image;
-
-    // Play music (if any)
-    const audio = document.getElementById("audio");
-    if (data.music) {
-      audio.src = data.music;
-      audio.currentTime = 0;
-      audio.play().catch(() => {});
-    } else {
-      audio.pause();
-      audio.src = "";
-    }
-
-  } catch (err) {
-    console.error(err);
-    alert("Error generating card");
-  }
-}
-</script>
+  </script>
 
 </body>
 </html>
