--- a/public/preview.html
+++ b/public/preview.html
@@ -1,121 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>VidGen</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-  * { box-sizing: border-box; font-family: system-ui, -apple-system; }
+body {
+  margin: 0;
+  background: #0f172a;
+  color: #e5e7eb;
+  font-family: system-ui, -apple-system;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
 
-  body {
-    margin: 0;
-    background: #0f172a;
-    color: #e5e7eb;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-  }
+.app {
+  max-width: 1100px;
+  width: 100%;
+  background: #020617;
+  padding: 20px;
+  border-radius: 16px;
+}
 
-  .app {
-    width: 100%;
-    max-width: 1100px;
-    background: #020617;
-    border-radius: 16px;
-    padding: 20px;
-    box-shadow: 0 20px 60px rgba(0,0,0,0.4);
-  }
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
 
-  header {
-    text-align: center;
-    margin-bottom: 20px;
-  }
+@media (max-width: 900px) {
+  .grid { grid-template-columns: 1fr; }
+}
 
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-  }
+.panel {
+  border: 1px solid #1e293b;
+  border-radius: 14px;
+  padding: 16px;
+}
 
-  @media (max-width: 900px) {
-    .grid { grid-template-columns: 1fr; }
-  }
+label {
+  font-size: 13px;
+  color: #94a3b8;
+  margin-top: 12px;
+  display: block;
+}
 
-  .panel {
-    border: 1px solid #1e293b;
-    border-radius: 14px;
-    padding: 16px;
-  }
+input, textarea, select {
+  width: 100%;
+  margin-top: 6px;
+  padding: 10px;
+  background: #020617;
+  border: 1px solid #334155;
+  border-radius: 8px;
+  color: #e5e7eb;
+}
 
-  label {
-    display: block;
-    font-size: 13px;
-    color: #94a3b8;
-    margin-top: 12px;
-  }
+textarea { min-height: 70px; }
 
-  textarea, input {
-    width: 100%;
-    margin-top: 6px;
-    padding: 10px;
-    background: #020617;
-    border: 1px solid #334155;
-    border-radius: 8px;
-    color: #e5e7eb;
-  }
+button {
+  width: 100%;
+  margin-top: 16px;
+  padding: 12px;
+  background: #38bdf8;
+  color: #020617;
+  border: none;
+  border-radius: 10px;
+  font-weight: 700;
+  cursor: pointer;
+}
 
-  textarea { min-height: 80px; }
+.preview-box {
+  background: #000;
+  border-radius: 14px;
+  overflow: hidden;
+  border: 1px solid #1e293b;
+}
 
-  .row { display: flex; gap: 10px; }
-  .row input { flex: 1; }
-
-  button {
-    width: 100%;
-    margin-top: 16px;
-    padding: 12px;
-    background: #38bdf8;
-    color: #020617;
-    border: none;
-    border-radius: 10px;
-    font-weight: 700;
-    cursor: pointer;
-  }
-
-  .preview-box {
-    aspect-ratio: 16 / 9;
-    background: #000;
-    border-radius: 14px;
-    overflow: hidden;
-    border: 1px solid #1e293b;
-  }
-
-  .preview-box img,
-  .preview-box video {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-
-  .hint {
-    font-size: 12px;
-    color: #94a3b8;
-    margin-top: 4px;
-  }
+.preview-box img,
+.preview-box video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 </style>
 </head>
 
 <body>
 
 <div class="app">
-  <header>
-    <h1>VidGen</h1>
-    <p>SVG Card + Audio Clip → Video</p>
-  </header>
-
   <div class="grid">
 
-    <!-- INPUT PANEL -->
+    <!-- INPUT -->
     <div class="panel">
+      <label>Aspect Ratio</label>
+      <select id="ratio">
+        <option value="1:1">1:1 (Square)</option>
+        <option value="9:16">9:16 (Reels / Shorts)</option>
+        <option value="16:9" selected>16:9 (YouTube)</option>
+      </select>
 
       <label>Main Text</label>
       <textarea id="text">HELLO WORLD</textarea>
@@ -127,35 +111,32 @@
       <input type="color" id="cardColor" value="#000000">
 
       <label>Song Title</label>
-      <input id="songTitle" placeholder="Song name">
+      <input id="songTitle">
 
       <label>Artist</label>
-      <input id="artist" placeholder="Artist name">
+      <input id="artist">
 
       <label>Song Image URL</label>
-      <input id="songImage" placeholder="https://example.com/cover.jpg">
+      <input id="songImage">
 
       <label>Music URL</label>
-      <input id="musicUrl" placeholder="https://example.com/song.mp3">
+      <input id="musicUrl">
 
-      <label>Audio Clip (seconds)</label>
-      <div class="row">
-        <input id="clipStart" type="number" min="0" step="0.1" placeholder="Start (sec)">
-        <input id="clipEnd" type="number" min="0" step="0.1" placeholder="End (sec)">
-      </div>
-      <div class="hint">Example: start 30, end 45 → 15s clip</div>
+      <label>Clip Start (sec)</label>
+      <input id="clipStart" type="number" step="0.1">
+
+      <label>Clip End (sec)</label>
+      <input id="clipEnd" type="number" step="0.1">
 
       <button onclick="generate()">Generate</button>
     </div>
 
-    <!-- PREVIEW PANEL -->
+    <!-- PREVIEW -->
     <div class="panel">
-      <label>SVG Preview</label>
       <div class="preview-box">
         <img id="svgPreview">
       </div>
-
-      <label>Video Preview</label>
+      <br>
       <div class="preview-box">
         <video id="videoPreview" controls></video>
       </div>
@@ -164,20 +145,19 @@
   </div>
 </div>
 
-<canvas id="canvas" width="1920" height="1080" style="display:none"></canvas>
+<canvas id="canvas" style="display:none"></canvas>
 
 <script>
 async function generate() {
-  const start = parseFloat(clipStart.value || 0);
-  const end = parseFloat(clipEnd.value || 0);
-  const duration = Math.max(0, end - start);
-
-  if (!musicUrl.value || duration <= 0) {
-    alert("Please provide music URL and valid clip times");
+  const start = Number(clipStart.value);
+  const end = Number(clipEnd.value);
+  if (!musicUrl.value || end <= start) {
+    alert("Invalid clip range or music URL");
     return;
   }
 
   const payload = {
+    ratio: ratio.value,
     text: text.value,
     textColor: textColor.value,
     cardColor: cardColor.value,
@@ -186,7 +166,7 @@ async function generate() {
     songImage: songImage.value,
     musicUrl: musicUrl.value,
     clipStart: start,
-    clipDuration: duration
+    clipEnd: end
   };
 
   const res = await fetch("/api/generate-card", {
@@ -206,16 +186,18 @@ async function generate() {
   const svgData =
     "data:image/svg+xml;base64," +
     btoa(unescape(encodeURIComponent(data.svg)));
-
   svgPreview.src = svgData;
 
-  // Video generation
-  const canvas = document.getElementById("canvas");
+  // Setup canvas
+  canvas.width = data.width;
+  canvas.height = data.height;
+
   const ctx = canvas.getContext("2d");
   const img = new Image();
   img.src = svgData;
   await img.decode();
 
+  // Audio clipping
   const audio = new Audio(data.audio);
   audio.currentTime = data.clipStart;
 
@@ -246,7 +228,7 @@ async function generate() {
     recorder.stop();
     audio.pause();
     ac.close();
-  }, duration * 1000);
+  }, data.clipDuration * 1000);
 }
 </script>
 
