--- a/public/preview.html
+++ b/public/preview.html
@@ -3,102 +3,84 @@
 <head>
 <meta charset="UTF-8">
 <title>VidGen</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
 body {
-  margin: 0;
-  background: #0f172a;
-  color: #e5e7eb;
-  font-family: system-ui, -apple-system;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
+  background:#0f172a;
+  color:#e5e7eb;
+  font-family:system-ui;
+  display:flex;
+  justify-content:center;
+  padding:20px;
 }
-
 .app {
-  max-width: 1100px;
-  width: 100%;
-  background: #020617;
-  padding: 20px;
-  border-radius: 16px;
+  max-width:1100px;
+  width:100%;
+  background:#020617;
+  padding:20px;
+  border-radius:16px;
 }
-
 .grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:20px;
 }
-
-@media (max-width: 900px) {
-  .grid { grid-template-columns: 1fr; }
-}
-
+@media(max-width:900px){.grid{grid-template-columns:1fr}}
 .panel {
-  border: 1px solid #1e293b;
-  border-radius: 14px;
-  padding: 16px;
+  border:1px solid #1e293b;
+  border-radius:14px;
+  padding:16px;
 }
-
 label {
-  font-size: 13px;
-  color: #94a3b8;
-  margin-top: 12px;
-  display: block;
+  font-size:13px;
+  color:#94a3b8;
+  margin-top:12px;
+  display:block;
 }
-
-input, textarea, select {
-  width: 100%;
-  margin-top: 6px;
-  padding: 10px;
-  background: #020617;
-  border: 1px solid #334155;
-  border-radius: 8px;
-  color: #e5e7eb;
+input,textarea,select {
+  width:100%;
+  margin-top:6px;
+  padding:10px;
+  background:#020617;
+  border:1px solid #334155;
+  border-radius:8px;
+  color:#e5e7eb;
 }
-
-textarea { min-height: 70px; }
-
 button {
-  width: 100%;
-  margin-top: 16px;
-  padding: 12px;
-  background: #38bdf8;
-  color: #020617;
-  border: none;
-  border-radius: 10px;
-  font-weight: 700;
-  cursor: pointer;
+  margin-top:16px;
+  padding:12px;
+  background:#38bdf8;
+  color:#020617;
+  border:none;
+  border-radius:10px;
+  font-weight:700;
+  cursor:pointer;
 }
-
-.preview-box {
-  background: #000;
-  border-radius: 14px;
-  overflow: hidden;
-  border: 1px solid #1e293b;
+.preview {
+  background:#000;
+  border-radius:14px;
+  overflow:hidden;
+  border:1px solid #1e293b;
 }
-
-.preview-box img,
-.preview-box video {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+.preview img,.preview video {
+  width:100%;
+  height:100%;
+  object-fit:contain;
 }
 </style>
 </head>
 
 <body>
-
 <div class="app">
   <div class="grid">
 
-    <!-- INPUT -->
     <div class="panel">
       <label>Aspect Ratio</label>
       <select id="ratio">
-        <option value="1:1">1:1 (Square)</option>
-        <option value="9:16">9:16 (Reels / Shorts)</option>
-        <option value="16:9" selected>16:9 (YouTube)</option>
+        <option value="1:1">1:1</option>
+        <option value="9:16">9:16</option>
+        <option value="16:9" selected>16:9</option>
       </select>
 
       <label>Main Text</label>
@@ -107,7 +89,7 @@ button {
       <label>Text Color</label>
       <input type="color" id="textColor" value="#ffffff">
 
-      <label>Card Background</label>
+      <label>Background Color</label>
       <input type="color" id="cardColor" value="#000000">
 
       <label>Song Title</label>
@@ -128,18 +110,12 @@ button {
       <label>Clip End (sec)</label>
       <input id="clipEnd" type="number" step="0.1">
 
-      <button onclick="generate()">Generate</button>
+      <button onclick="generate()">Generate & Download</button>
     </div>
 
-    <!-- PREVIEW -->
     <div class="panel">
-      <div class="preview-box">
-        <img id="svgPreview">
-      </div>
-      <br>
-      <div class="preview-box">
-        <video id="videoPreview" controls></video>
-      </div>
+      <div class="preview"><img id="svgPreview"></div><br>
+      <div class="preview"><video id="videoPreview" controls></video></div>
     </div>
 
   </div>
@@ -148,89 +124,96 @@ button {
 <canvas id="canvas" style="display:none"></canvas>
 
 <script>
-async function generate() {
-  const start = Number(clipStart.value);
-  const end = Number(clipEnd.value);
-  if (!musicUrl.value || end <= start) {
-    alert("Invalid clip range or music URL");
-    return;
-  }
+async function urlToBase64(url){
+  if(!url) return "";
+  const r=await fetch(url);
+  const b=await r.blob();
+  return await new Promise(res=>{
+    const fr=new FileReader();
+    fr.onload=()=>res(fr.result);
+    fr.readAsDataURL(b);
+  });
+}
 
-  const payload = {
-    ratio: ratio.value,
-    text: text.value,
-    textColor: textColor.value,
-    cardColor: cardColor.value,
-    songTitle: songTitle.value,
-    artist: artist.value,
-    songImage: songImage.value,
-    musicUrl: musicUrl.value,
-    clipStart: start,
-    clipEnd: end
+async function generate(){
+  const start=Number(clipStart.value);
+  const end=Number(clipEnd.value);
+  if(end<=start){alert("Invalid clip range");return;}
+
+  const img64 = await urlToBase64(songImage.value);
+
+  const payload={
+    ratio:ratio.value,
+    text:text.value,
+    textColor:textColor.value,
+    cardColor:cardColor.value,
+    songTitle:songTitle.value,
+    artist:artist.value,
+    songImage:img64,
+    musicUrl:musicUrl.value,
+    clipStart:start,
+    clipEnd:end
   };
 
-  const res = await fetch("/api/generate-card", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(payload)
+  const r=await fetch("/api/generate-card",{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify(payload)
   });
 
-  const raw = await res.text();
-  let data;
-  try { data = JSON.parse(raw); }
-  catch { return alert("Server error"); }
+  const data=JSON.parse(await r.text());
+  if(!data.success){alert("API failed");return;}
 
-  if (!data.success) return alert("API failed");
-
-  // SVG preview
-  const svgData =
-    "data:image/svg+xml;base64," +
+  const svgData="data:image/svg+xml;base64,"+
     btoa(unescape(encodeURIComponent(data.svg)));
-  svgPreview.src = svgData;
+  svgPreview.src=svgData;
 
-  // Setup canvas
-  canvas.width = data.width;
-  canvas.height = data.height;
+  canvas.width=data.width;
+  canvas.height=data.height;
 
-  const ctx = canvas.getContext("2d");
-  const img = new Image();
-  img.src = svgData;
+  const ctx=canvas.getContext("2d");
+  const img=new Image();
+  img.src=svgData;
   await img.decode();
 
-  // Audio clipping
-  const audio = new Audio(data.audio);
-  audio.currentTime = data.clipStart;
+  const audio=new Audio(data.audio);
+  audio.currentTime=data.clipStart;
 
-  const stream = canvas.captureStream(30);
-  const ac = new AudioContext();
-  const src = ac.createMediaElementSource(audio);
-  const dest = ac.createMediaStreamDestination();
-  src.connect(dest);
-  src.connect(ac.destination);
+  const stream=canvas.captureStream(30);
+  const ac=new AudioContext();
+  const src=ac.createMediaElementSource(audio);
+  const dest=ac.createMediaStreamDestination();
+  src.connect(dest); src.connect(ac.destination);
   stream.addTrack(dest.stream.getAudioTracks()[0]);
 
-  const recorder = new MediaRecorder(stream);
-  const chunks = [];
-  recorder.ondataavailable = e => chunks.push(e.data);
-  recorder.onstop = () => {
-    videoPreview.src = URL.createObjectURL(new Blob(chunks));
+  const rec=new MediaRecorder(stream,{mimeType:"video/webm"});
+  const chunks=[];
+  rec.ondataavailable=e=>chunks.push(e.data);
+  rec.onstop=()=>{
+    const blob=new Blob(chunks,{type:"video/webm"});
+    const url=URL.createObjectURL(blob);
+    videoPreview.src=url;
+
+    const a=document.createElement("a");
+    a.href=url;
+    a.download="video.webm";
+    a.click();
   };
 
-  recorder.start();
+  rec.start();
   audio.play();
 
-  const drawLoop = setInterval(() => {
-    ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-  }, 33);
+  const loop=setInterval(()=>{
+    ctx.drawImage(img,0,0,canvas.width,canvas.height);
+  },33);
 
-  setTimeout(() => {
-    clearInterval(drawLoop);
-    recorder.stop();
+  setTimeout(()=>{
+    clearInterval(loop);
+    rec.stop();
     audio.pause();
     ac.close();
-  }, data.clipDuration * 1000);
+  },data.clipDuration*1000);
 }
 </script>
-
 </body>
 </html>
