--- a/public/preview.html
+++ b/public/preview.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>VidGen</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 body {
   background:#0f172a;
@@ -75,10 +76,10 @@ button {
 
 <div class="panel">
   <label>User ID</label>
-  <input id="uid" placeholder="uid123">
+  <input id="uid">
 
   <label>User Name</label>
-  <input id="username" placeholder="Sanju">
+  <input id="username">
 
   <label>User Profile Image URL</label>
   <input id="userProfileImage">
